--- a/DataAccess/North_DbFirst/North_DbFirst.csproj
+++ b/DataAccess/North_DbFirst/North_DbFirst.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Models\Employee.Override.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Partials\Employee.Override.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.12">
       <PrivateAssets>all</PrivateAssets>
